--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,9 @@
 <head>
-  <title>Reactreact Boilerplate</title>
+		<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Meteor React Boilerplate</title>
 </head>
 
-<div id="app"></div>
+<body>
+		<div id="app"></div>
+</body>
